tests/compile-fail/nesting-limit-exceeded/test_main.h64
# Copyright (c) 2023-2025, ellie/@ell1e & Horse64's contributors
# (see AUTHORS.md).
## @build_options --single-file
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice,
#    this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.
#
# Alternatively, at your option, this file is offered under the Apache 2
# license, see accompanied LICENSE.md.

func main {
if (yes) {  # Depth 1
if (yes) {  # Depth 2
if (yes) {  # Depth 3
if (yes) {  # Depth 4
if (yes) {  # Depth 5
if (yes) {  # Depth 6
if (yes) {  # Depth 7
if (yes) {  # Depth 8
if (yes) {  # Depth 9
if (yes) {  # Depth 10
if (yes) {  # Depth 11
if (yes) {  # Depth 12
if (yes) {  # Depth 13
if (yes) {  # Depth 14
if (yes) {  # Depth 15
if (yes) {  # Depth 16
if (yes) {  # Depth 17
if (yes) {  # Depth 18
if (yes) {  # Depth 19
if (yes) {  # Depth 20
if (yes) {  # Depth 21
if (yes) {  # Depth 22
if (yes) {  # Depth 23
if (yes) {  # Depth 24
if (yes) {  # Depth 25
if (yes) {  # Depth 26
if (yes) {  # Depth 27
if (yes) {  # Depth 28
if (yes) {  # Depth 29
if (yes) {  # Depth 30
if (yes) {  # Depth 31
if (yes) {  # Depth 32
if (yes) {  # Depth 33
if (yes) {  # Depth 34
if (yes) {  # Depth 35
if (yes) {  # Depth 36
if (yes) {  # Depth 37
if (yes) {  # Depth 38
if (yes) {  # Depth 39
if (yes) {  # Depth 40
if (yes) {  # Depth 41
if (yes) {  # Depth 42
if (yes) {  # Depth 43
if (yes) {  # Depth 44
if (yes) {  # Depth 45
if (yes) {  # Depth 46
if (yes) {  # Depth 47
if (yes) {  # Depth 48
if (yes) {  # Depth 49
if (yes) {  # Depth 50
if (yes) {  # Depth 51
if (yes) {  # Depth 52
if (yes) {  # Depth 53
if (yes) {  # Depth 54
if (yes) {  # Depth 55
if (yes) {  # Depth 56
if (yes) {  # Depth 57
if (yes) {  # Depth 58
if (yes) {  # Depth 59
if (yes) {  # Depth 60
if (yes) {  # Depth 61
if (yes) {  # Depth 62
if (yes) {  # Depth 63
if (yes) {  # Depth 64
if (yes) {  # Depth 65
if (yes) {  # Depth 66
if (yes) {  # Depth 67
if (yes) {  # Depth 68
if (yes) {  # Depth 69
if (yes) {  # Depth 70
if (yes) {  # Depth 71
if (yes) {  # Depth 72
if (yes) {  # Depth 73
if (yes) {  # Depth 74
if (yes) {  # Depth 75
if (yes) {  # Depth 76
if (yes) {  # Depth 77
if (yes) {  # Depth 78
if (yes) {  # Depth 79
if (yes) {  # Depth 80
if (yes) {  # Depth 81
if (yes) {  # Depth 82
if (yes) {  # Depth 83
if (yes) {  # Depth 84
if (yes) {  # Depth 85
if (yes) {  # Depth 86
if (yes) {  # Depth 87
if (yes) {  # Depth 88
if (yes) {  # Depth 89
if (yes) {  # Depth 90
if (yes) {  # Depth 91
if (yes) {  # Depth 92
if (yes) {  # Depth 93
if (yes) {  # Depth 94
if (yes) {  # Depth 95
if (yes) {  # Depth 96
if (yes) {  # Depth 97
if (yes) {  # Depth 98
if (yes) {  # Depth 99
if (yes) {  # Depth 100
if (yes) {  # Depth 101
if (yes) {  # Depth 102
if (yes) {  # Depth 103
if (yes) {  # Depth 104
if (yes) {  # Depth 105
if (yes) {  # Depth 106
if (yes) {  # Depth 107
if (yes) {  # Depth 108
if (yes) {  # Depth 109
if (yes) {  # Depth 110
if (yes) {  # Depth 111
if (yes) {  # Depth 112
if (yes) {  # Depth 113
if (yes) {  # Depth 114
if (yes) {  # Depth 115
if (yes) {  # Depth 116
if (yes) {  # Depth 117
if (yes) {  # Depth 118
if (yes) {  # Depth 119
if (yes) {  # Depth 120
if (yes) {  # Depth 121
if (yes) {  # Depth 122
if (yes) {  # Depth 123
if (yes) {  # Depth 124
if (yes) {  # Depth 125
if (yes) {  # Depth 126
if (yes) {  # Depth 127
if (yes) {  # Depth 128
if (yes) {  # Depth 129
if (yes) {  # Depth 130
if (yes) {  # Depth 131
if (yes) {  # Depth 132
if (yes) {  # Depth 133
if (yes) {  # Depth 134
if (yes) {  # Depth 135
if (yes) {  # Depth 136
if (yes) {  # Depth 137
if (yes) {  # Depth 138
if (yes) {  # Depth 139
if (yes) {  # Depth 140
if (yes) {  # Depth 141
if (yes) {  # Depth 142
if (yes) {  # Depth 143
if (yes) {  # Depth 144
if (yes) {  # Depth 145
if (yes) {  # Depth 146
if (yes) {  # Depth 147
if (yes) {  # Depth 148
if (yes) {  # Depth 149
if (yes) {  # Depth 150
if (yes) {  # Depth 151
if (yes) {  # Depth 152
if (yes) {  # Depth 153
if (yes) {  # Depth 154
if (yes) {  # Depth 155
if (yes) {  # Depth 156
if (yes) {  # Depth 157
if (yes) {  # Depth 158
if (yes) {  # Depth 159
if (yes) {  # Depth 160
if (yes) {  # Depth 161
if (yes) {  # Depth 162
if (yes) {  # Depth 163
if (yes) {  # Depth 164
if (yes) {  # Depth 165
if (yes) {  # Depth 166
if (yes) {  # Depth 167
if (yes) {  # Depth 168
if (yes) {  # Depth 169
if (yes) {  # Depth 170
if (yes) {  # Depth 171
if (yes) {  # Depth 172
if (yes) {  # Depth 173
if (yes) {  # Depth 174
if (yes) {  # Depth 175
if (yes) {  # Depth 176
if (yes) {  # Depth 177
if (yes) {  # Depth 178
if (yes) {  # Depth 179
if (yes) {  # Depth 180
if (yes) {  # Depth 181
if (yes) {  # Depth 182
if (yes) {  # Depth 183
if (yes) {  # Depth 184
if (yes) {  # Depth 185
if (yes) {  # Depth 186
if (yes) {  # Depth 187
if (yes) {  # Depth 188
if (yes) {  # Depth 189
if (yes) {  # Depth 190
if (yes) {  # Depth 191
if (yes) {  # Depth 192
if (yes) {  # Depth 193
if (yes) {  # Depth 194
if (yes) {  # Depth 195
if (yes) {  # Depth 196
if (yes) {  # Depth 197
if (yes) {  # Depth 198
if (yes) {  # Depth 199
if (yes) {  # Depth 200
if (yes) {  # Depth 201
if (yes) {  # Depth 202
if (yes) {  # Depth 203
if (yes) {  # Depth 204
if (yes) {  # Depth 205
if (yes) {  # Depth 206
if (yes) {  # Depth 207
if (yes) {  # Depth 208
if (yes) {  # Depth 209
if (yes) {  # Depth 210
if (yes) {  # Depth 211
if (yes) {  # Depth 212
if (yes) {  # Depth 213
if (yes) {  # Depth 214
if (yes) {  # Depth 215
if (yes) {  # Depth 216
if (yes) {  # Depth 217
if (yes) {  # Depth 218
if (yes) {  # Depth 219
if (yes) {  # Depth 220
if (yes) {  # Depth 221
if (yes) {  # Depth 222
if (yes) {  # Depth 223
if (yes) {  # Depth 224
if (yes) {  # Depth 225
if (yes) {  # Depth 226
if (yes) {  # Depth 227
if (yes) {  # Depth 228
if (yes) {  # Depth 229
if (yes) {  # Depth 230
if (yes) {  # Depth 231
if (yes) {  # Depth 232
if (yes) {  # Depth 233
if (yes) {  # Depth 234
if (yes) {  # Depth 235
if (yes) {  # Depth 236
if (yes) {  # Depth 237
if (yes) {  # Depth 238
if (yes) {  # Depth 239
if (yes) {  # Depth 240
if (yes) {  # Depth 241
if (yes) {  # Depth 242
if (yes) {  # Depth 243
if (yes) {  # Depth 244
if (yes) {  # Depth 245
if (yes) {  # Depth 246
if (yes) {  # Depth 247
if (yes) {  # Depth 248
if (yes) {  # Depth 249
if (yes) {  # Depth 250
if (yes) {  # Depth 251
if (yes) {  # Depth 252
if (yes) {  # Depth 253
if (yes) {  # Depth 254
if (yes) {  # Depth 255
if (yes) {  # Depth 256
if (yes) {  # Depth 257
if (yes) {  # Depth 258
if (yes) {  # Depth 259
if (yes) {  # Depth 260
if (yes) {  # Depth 261
if (yes) {  # Depth 262
if (yes) {  # Depth 263
if (yes) {  # Depth 264
if (yes) {  # Depth 265
if (yes) {  # Depth 266
if (yes) {  # Depth 267
if (yes) {  # Depth 268
if (yes) {  # Depth 269
if (yes) {  # Depth 270
if (yes) {  # Depth 271
if (yes) {  # Depth 272
if (yes) {  # Depth 273
if (yes) {  # Depth 274
if (yes) {  # Depth 275
if (yes) {  # Depth 276
if (yes) {  # Depth 277
if (yes) {  # Depth 278
if (yes) {  # Depth 279
if (yes) {  # Depth 280
if (yes) {  # Depth 281
if (yes) {  # Depth 282
if (yes) {  # Depth 283
if (yes) {  # Depth 284
if (yes) {  # Depth 285
if (yes) {  # Depth 286
if (yes) {  # Depth 287
if (yes) {  # Depth 288
if (yes) {  # Depth 289
if (yes) {  # Depth 290
if (yes) {  # Depth 291
if (yes) {  # Depth 292
if (yes) {  # Depth 293
if (yes) {  # Depth 294
if (yes) {  # Depth 295
if (yes) {  # Depth 296
if (yes) {  # Depth 297
if (yes) {  # Depth 298
if (yes) {  # Depth 299
if (yes) {  # Depth 300
print("Hello World!")
}  # Depth 300
}  # Depth 299
}  # Depth 298
}  # Depth 297
}  # Depth 296
}  # Depth 295
}  # Depth 294
}  # Depth 293
}  # Depth 292
}  # Depth 291
}  # Depth 290
}  # Depth 289
}  # Depth 288
}  # Depth 287
}  # Depth 286
}  # Depth 285
}  # Depth 284
}  # Depth 283
}  # Depth 282
}  # Depth 281
}  # Depth 280
}  # Depth 279
}  # Depth 278
}  # Depth 277
}  # Depth 276
}  # Depth 275
}  # Depth 274
}  # Depth 273
}  # Depth 272
}  # Depth 271
}  # Depth 270
}  # Depth 269
}  # Depth 268
}  # Depth 267
}  # Depth 266
}  # Depth 265
}  # Depth 264
}  # Depth 263
}  # Depth 262
}  # Depth 261
}  # Depth 260
}  # Depth 259
}  # Depth 258
}  # Depth 257
}  # Depth 256
}  # Depth 255
}  # Depth 254
}  # Depth 253
}  # Depth 252
}  # Depth 251
}  # Depth 250
}  # Depth 249
}  # Depth 248
}  # Depth 247
}  # Depth 246
}  # Depth 245
}  # Depth 244
}  # Depth 243
}  # Depth 242
}  # Depth 241
}  # Depth 240
}  # Depth 239
}  # Depth 238
}  # Depth 237
}  # Depth 236
}  # Depth 235
}  # Depth 234
}  # Depth 233
}  # Depth 232
}  # Depth 231
}  # Depth 230
}  # Depth 229
}  # Depth 228
}  # Depth 227
}  # Depth 226
}  # Depth 225
}  # Depth 224
}  # Depth 223
}  # Depth 222
}  # Depth 221
}  # Depth 220
}  # Depth 219
}  # Depth 218
}  # Depth 217
}  # Depth 216
}  # Depth 215
}  # Depth 214
}  # Depth 213
}  # Depth 212
}  # Depth 211
}  # Depth 210
}  # Depth 209
}  # Depth 208
}  # Depth 207
}  # Depth 206
}  # Depth 205
}  # Depth 204
}  # Depth 203
}  # Depth 202
}  # Depth 201
}  # Depth 200
}  # Depth 199
}  # Depth 198
}  # Depth 197
}  # Depth 196
}  # Depth 195
}  # Depth 194
}  # Depth 193
}  # Depth 192
}  # Depth 191
}  # Depth 190
}  # Depth 189
}  # Depth 188
}  # Depth 187
}  # Depth 186
}  # Depth 185
}  # Depth 184
}  # Depth 183
}  # Depth 182
}  # Depth 181
}  # Depth 180
}  # Depth 179
}  # Depth 178
}  # Depth 177
}  # Depth 176
}  # Depth 175
}  # Depth 174
}  # Depth 173
}  # Depth 172
}  # Depth 171
}  # Depth 170
}  # Depth 169
}  # Depth 168
}  # Depth 167
}  # Depth 166
}  # Depth 165
}  # Depth 164
}  # Depth 163
}  # Depth 162
}  # Depth 161
}  # Depth 160
}  # Depth 159
}  # Depth 158
}  # Depth 157
}  # Depth 156
}  # Depth 155
}  # Depth 154
}  # Depth 153
}  # Depth 152
}  # Depth 151
}  # Depth 150
}  # Depth 149
}  # Depth 148
}  # Depth 147
}  # Depth 146
}  # Depth 145
}  # Depth 144
}  # Depth 143
}  # Depth 142
}  # Depth 141
}  # Depth 140
}  # Depth 139
}  # Depth 138
}  # Depth 137
}  # Depth 136
}  # Depth 135
}  # Depth 134
}  # Depth 133
}  # Depth 132
}  # Depth 131
}  # Depth 130
}  # Depth 129
}  # Depth 128
}  # Depth 127
}  # Depth 126
}  # Depth 125
}  # Depth 124
}  # Depth 123
}  # Depth 122
}  # Depth 121
}  # Depth 120
}  # Depth 119
}  # Depth 118
}  # Depth 117
}  # Depth 116
}  # Depth 115
}  # Depth 114
}  # Depth 113
}  # Depth 112
}  # Depth 111
}  # Depth 110
}  # Depth 109
}  # Depth 108
}  # Depth 107
}  # Depth 106
}  # Depth 105
}  # Depth 104
}  # Depth 103
}  # Depth 102
}  # Depth 101
}  # Depth 100
}  # Depth 99
}  # Depth 98
}  # Depth 97
}  # Depth 96
}  # Depth 95
}  # Depth 94
}  # Depth 93
}  # Depth 92
}  # Depth 91
}  # Depth 90
}  # Depth 89
}  # Depth 88
}  # Depth 87
}  # Depth 86
}  # Depth 85
}  # Depth 84
}  # Depth 83
}  # Depth 82
}  # Depth 81
}  # Depth 80
}  # Depth 79
}  # Depth 78
}  # Depth 77
}  # Depth 76
}  # Depth 75
}  # Depth 74
}  # Depth 73
}  # Depth 72
}  # Depth 71
}  # Depth 70
}  # Depth 69
}  # Depth 68
}  # Depth 67
}  # Depth 66
}  # Depth 65
}  # Depth 64
}  # Depth 63
}  # Depth 62
}  # Depth 61
}  # Depth 60
}  # Depth 59
}  # Depth 58
}  # Depth 57
}  # Depth 56
}  # Depth 55
}  # Depth 54
}  # Depth 53
}  # Depth 52
}  # Depth 51
}  # Depth 50
}  # Depth 49
}  # Depth 48
}  # Depth 47
}  # Depth 46
}  # Depth 45
}  # Depth 44
}  # Depth 43
}  # Depth 42
}  # Depth 41
}  # Depth 40
}  # Depth 39
}  # Depth 38
}  # Depth 37
}  # Depth 36
}  # Depth 35
}  # Depth 34
}  # Depth 33
}  # Depth 32
}  # Depth 31
}  # Depth 30
}  # Depth 29
}  # Depth 28
}  # Depth 27
}  # Depth 26
}  # Depth 25
}  # Depth 24
}  # Depth 23
}  # Depth 22
}  # Depth 21
}  # Depth 20
}  # Depth 19
}  # Depth 18
}  # Depth 17
}  # Depth 16
}  # Depth 15
}  # Depth 14
}  # Depth 13
}  # Depth 12
}  # Depth 11
}  # Depth 10
}  # Depth 9
}  # Depth 8
}  # Depth 7
}  # Depth 6
}  # Depth 5
}  # Depth 4
}  # Depth 3
}  # Depth 2
}  # Depth 1
}

